- adapted to Java 11